<resources>
    <string name="app_name">Star Movies</string>
    <string name="start">Get Started</string>
    <string name="register">Register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="register_now">REGISTER</string>
    <string name="already_have_an_account_sign_in">Already have an account? SIGN IN</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? REGISTER</string>
    <string name="welcome_to_star_cinema">Welcome to Star Cinema!</string>
    <string name="app_logo">Application Logo</string>

    <string name="now_showing">Now Showing</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="buy_ticket">BUY TICKET</string>
    <string name="next_movie">NEXT MOVIE</string>
    <string name="select_date_and_time">Select Date and Time</string>
    <string name="back_button" />
</resources>