<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_app_logo"
            android:layout_width="302dp"
            android:layout_height="272dp"
            android:contentDescription="@string/app_logo"
            android:src="@drawable/ic_movie_logo" />

        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/app_sub_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Movie Ticket Booking App"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btn_start"
            android:layout_width="184dp"
            android:layout_height="60dp"
            android:layout_marginTop="90dp"
            android:backgroundTint="#0C6E99"
            android:text="@string/start"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:strokeColor="#F0E9E9"
            app:strokeWidth="1dp" />

    </LinearLayout>

</RelativeLayout>