<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".Movie1Activity">

    <RelativeLayout
        android:id="@+id/rl_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerInParent="true">

            <Button
                android:id="@+id/btn_now_showing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#45539B"
                android:text="@string/now_showing"
                android:textColor="@android:color/white"
                app:strokeColor="#EDE6E6"
                app:strokeWidth="1dp" />

            <Button
                android:id="@+id/btn_coming_soon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:backgroundTint="#736F6F"
                android:text="@string/coming_soon"
                android:textColor="#B8B0B0" />
        </LinearLayout>
    </RelativeLayout>

    <ImageView
        android:id="@+id/iv_movie_poster"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_below="@id/rl_header"
        android:layout_marginStart="16dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/movie_poster"
        android:scaleType="centerCrop"
        android:background="@drawable/shape_rounded_corners"
        android:clipToOutline="true"
        android:src="@drawable/intestellermovie" />

    <LinearLayout
        android:id="@+id/ll_movie_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_movie_poster"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:gravity="center"
        android:paddingEnd="16dp">

        <TextView
            android:id="@+id/tv_movie_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Intestellar"
            android:textColor="@android:color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Action | Anime | Thriller"
            android:textColor="#CCCCCC"
            android:textSize="14sp"
            android:layout_marginTop="4dp"/>

        <TextView
            android:id="@+id/tv_movie_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="~ 2hr 35min"
            android:textColor="#A8A8A8"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_movie_imdb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="IMDB ★ 8.0"
            android:textColor="#FFC107"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:padding="16dp">

        <Button
            android:id="@+id/btn_buy_ticket"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:backgroundTint="#8C6F42"
            android:text="@string/buy_ticket"
            android:textColor="@android:color/white"
            app:strokeColor="#EDE5E5"
            app:strokeWidth="1dp" />

        <Button
            android:id="@+id/btn_next_movie"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:backgroundTint="#D17052"
            android:text="@string/next_movie"
            android:textColor="@android:color/white"
            app:strokeColor="#EFEBEB"
            app:strokeWidth="1dp" />
    </LinearLayout>

</RelativeLayout>